# photopoint-test

./: .env.local  .gitattributes  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
currency/: models.py  repository.py  service.py  urls.py  views.py
currency/migrations/: 0001_initial.py
deploy/: Dockerfile  docker-entrypoint.sh
photopoint_test/: asgi.py  settings.py  urls.py  wsgi.py
