[tool.poetry]
name = "photopoint-test"
version = "0.1.0"
description = ""
authors = ["Saveliy <s.lekhtin@innopolis.university>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
